# github-text-mining-tfg

./: .env  .gitignore  .pylintrc  Dockerfile  README.md  requirements.txt
src/backend/gtmapi/: run.sh  setup.cfg  setup.py
src/backend/gtmapi/gtmapi/: __init__.py
src/backend/gtmapi/gtmapi/presentation/rest/: __init__.py  response.py  taskmanager.py
src/backend/gtmcore/: install.sh  run.sh  setup.cfg
src/backend/gtmcore/gtmcore/: __init__.py
src/backend/gtmcore/gtmcore/data/config/: __init__.py  baseconfiguration.py  dbconfiguration.py
src/backend/gtmcore/gtmcore/data/config/err/: __init__.py  configurationfilenotcreated.py
src/backend/gtmcore/gtmcore/data/db/: __init__.py  schema.py  taskstate.py
src/backend/gtmcore/gtmcore/data/db/enums/: __init__.py  taskstate.py  tasktype.py
src/backend/gtmcore/gtmcore/data/db/err/: __init__.py  commentalreadyexistserror.py  commentnotexistserror.py  issuealreadyexistserror.py  issuenotexistserror.py  outcomealreadyexistserror.py  outcomenotexistserror.py  repositorynotexistserror.py  (+3 more)
src/backend/gtmcore/gtmcore/logic/: __init__.py  dbmanager.py
src/backend/gtmcore/gtmcore/logic/utils/: __init__.py  datautils.py
src/backend/gtmextraction/: run.sh  setup.cfg
src/backend/gtmextraction/gtmextraction/: __init__.py
src/backend/gtmextraction/gtmextraction/logic/: __init__.py
src/backend/gtmextraction/gtmextraction/logic/connections/: __init__.py  githubconnection.py  githubmanager.py
src/backend/gtmprocessing/: install.sh  run.sh  setup.cfg  setup.py
src/backend/gtmprocessing/gtmprocessing/: __init__.py
src/backend/gtmprocessing/gtmprocessing/data/: __init__.py  modeldownloader.py
src/backend/gtmprocessing/gtmprocessing/data/err/: invalidnlpmodel.py
src/backend/gtmprocessing/gtmprocessing/err/: __init__.py  invalidnlpmodel.py
src/backend/gtmprocessing/gtmprocessing/logic/: __init__.py  modeltype.py  processingmanager.py
src/backend/gtmprocessing/gtmprocessing/logic/algorithms/: __init__.py  basealgorithm.py  zeroshotclassifier.py
src/backend/gtmprocessing/gtmprocessing/logic/models/: __init__.py  basemodel.py  sentimentsanalysis.py  summarization.py  zeroshotclassifier.py
src/backend/gtmprocessing/gtmprocessing/logic/utils/: __init__.py  textpreprocessor.py
(+181 files in other folders)
