[metadata]
name = gtmapi
version = attr: gtmapi.VERSION
description = TFG 2020-2021 GitHub Text Mining REST API
long_description = file: README.md
keywords = tfg, ubu, text_mining, rest, service
license = GLP V3

[options]
packages = find:
zip_safe = False
include_package_data = True
scripts =
    bin/gtmapi
install_requires = sqlalchemy; flask; gtmcore