[metadata]
name = gtmcore
version = attr: gtmcore.VERSION
description = TFG 2020-2021 GitHub Text Mining CORE
long_description = file: README.md
keywords = tfg, ubu, text_mining, core, library
license = GLP V3

[options]
packages = find:
zip_safe = False
include_package_data = True
install_requires = sqlalchemy; mariadb; numpy; blingfire; markdown-checklist; mdx-gh-links; markdown; beautifulsoup4;