[metadata]
name = gtmextraction
version = attr: gtmextraction.VERSION
description = TFG 2020-2021 GitHub Text Mining EXTRACTION
long_description = file: README.md
keywords = tfg, ubu, text_mining, extraction, service
license = GLP V3

[options]
packages = find:
zip_safe = False
include_package_data = True
scripts =
    bin/gtmextraction
install_requires = sqlalchemy; flask; gtmcore