[metadata]
name = gtmprocessing
version = attr: gtmprocessing.VERSION
description = TFG 2020-2021 GitHub Text Mining PROCESSING
long_description = file: README.md
keywords = tfg, ubu, text_mining, processing, service
license = GLP V3

[options]
packages = find:
zip_safe = False
include_package_data = True
scripts =
    bin/gtmprocessing
install_requires = sqlalchemy; torch; transformers[torch]; gtmcore